# pgsql-query

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.codex-plugin/: plugin.json
.codex/skills/postgresql-readonly-cli/: SKILL.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-17-github-actions-release.md  2026-03-17-pgq-cli-and-skill.md  2026-03-31-skill-installer-release.md
scripts/: package-release.sh  release.sh  smoke.sh
skills/pgsql-query/: SKILL.md
skills/pgsql-query/scripts/: install_pgsql_query.sh
skills/postgresql-readonly-cli/: SKILL.md
skills/postgresql-readonly-cli/scripts/: install_pgq.sh
src/: cli.rs  commands.rs  config.rs  db.rs  lib.rs  main.rs  output.rs
tests/: cli_help.rs  cli_parse.rs  github_release_contract.rs  install-script-test.sh  query_guard.rs  readme_exists.rs  release_script.rs  scripts_cleanup_contract.rs  skill_distribution_contract.rs  smoke_script.rs  version_contract.rs
