[package]
name = "pgsql-query"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"

[dev-dependencies]
assert_matches = "1.5"
